risc0/zirgen/dsl/test/repro/specializer_missing_type.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error: Expected type annotation expression

function DeclarationTest<a: , c: Val>() {}

